llm-d/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openshift-ai-inference
  namespace: openshift-ingress
spec:
  controllerName: openshift.io/gateway-controller/v1
