llm-d/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openshift-ai-inference
  namespace: openshift-ingress 
spec:
  gatewayClassName: openshift-ai-inference
  listeners:
  - name: http 
    hostname: "aigw.${DOMAIN}" 
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
